--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,7 @@
     }
   ],
   "require-dev": {
-    "phpunit/phpunit": "5.7.21"
+    "phpunit/phpunit": "^9.5"
   },
   "autoload": {
     "classmap": [
